<resources>
    <string name="app_name">HelpDesk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_desc">If you cannot find answers to your FAQs, you can always contact us. We will answer you shortly!</string>
    <string name="hello_header">Hey there, 👋! I\'m…</string>
    <string name="get_started">Get started</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="leave_app_prompt_title">Leaving so soon, 😥?</string>
    <string name="leave_app_prompt_content">Do you wish to leave this session?</string>
    <string name="sign_out_prompt_content">Do you wish to sign out?</string>
    <string name="empty_tickets_state">Your tickets will appear here</string>
    <string name="empty_tickets_state_desc">If you cannot find what you are looking for in the \"FAQs\" section, you can create a new ticket by tapping on the button below to get started. A technician will be assigned to you shortly</string>
    <string name="type_question">Question</string>
    <string name="type_enquiry">Enquiry</string>
    <string name="type_other">Other</string>
    <string name="ticket_type">Ticket Type</string>
    <string name="available_technicians">Available Technicians</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="ticket_name">Ticket Name</string>
    <string name="submit">Submit</string>
    <string name="no_technicians">No technicians available at the moment</string>
    <string name="login_prompt">Sign in to access your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_one">Create one…</string>
    <string name="register_prompt">Join now to query FAQs and get support from professional helpdesk technicians with ease.</string>
    <string name="has_account">Already having an account?</string>
    <string name="full_name">Full Name</string>
    <string name="join">Proceed</string>
    <string name="account_type">Account Type</string>
    <string name="save">save</string>
    <string name="account_picker_prompt">Select your account type to get started. This will enable us to create a more personalized experience for you</string>
    <string name="manage_tasks">Manage tasks</string>
    <string name="send_alerts">Send alerts</string>
    <string name="upload_faqs">Upload FAQs</string>
    <string name="technician">Technician</string>
    <string name="receive_feedback_from_technicians">Receive feedback from technicians</string>
    <string name="smart_search">Smart search</string>
    <string name="create_tickets">Create tickets</string>
    <string name="verify_faqs">Verify FAQs</string>
    <string name="customer">Customer</string>
    <string name="logout_prompt_desc">By signing out, you will not be able to receive feedback on tickets created. Do you wish to continue?</string>
    <string name="logout_prompt_title">Confirm logout</string>
    <string name="update_status">Update status</string>
    <string name="send_feedback">Send feedback</string>
    <string name="update_priority">Update priority</string>
    <string name="reassign">Reassign</string>
    <string name="feedback">Feedback…</string>
    <string name="feedback_title_hint">Create a feedback for this ticket. Your words should not be more than 100.</string>
    <string name="add_user">Add user</string>
    <string name="empty_users_state">All users will appear here</string>
    <string name="empty_users_state_desc">Technicians and customers registered will appear here. Currently there is none available</string>
    <string name="all_users">All Users</string>
    <string name="customers">Customers</string>
    <string name="technicians">Technicians</string>
    <string name="create_user">Create account</string>
    <string name="delete">delete</string>
    <string name="call">call</string>
    <string name="update_state">Mark as…</string>
    <string name="created_on">Created on:</string>
    <string name="description">Description…</string>
</resources>