<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WelcomeFragment">

    <!-- animation -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/tickets_animation_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_300"
        android:layout_marginTop="@dimen/spacing_56"
        app:layout_constraintBottom_toTopOf="@id/tickets_empty_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/helpdesk_info_1" />

    <!-- intro -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tickets_empty_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_36"
        android:alpha="?emphasis_medium"
        android:paddingStart="@dimen/spacing_24"
        android:paddingEnd="@dimen/spacing_none"
        android:text="@string/hello_header"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tickets_animation_view" />

    <!-- logo -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/spacing_36"
        android:layout_height="@dimen/spacing_36"
        android:layout_marginStart="@dimen/spacing_20"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="@id/welcome_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/welcome_title" />

    <!-- title -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_8"
        android:layout_marginTop="@dimen/spacing_4"
        android:text="@string/app_name"
        android:textAppearance="?textAppearanceHeadline4"
        android:textColor="?attr/colorControlNormal"
        app:layout_constraintStart_toEndOf="@id/app_logo"
        app:layout_constraintTop_toBottomOf="@id/tickets_empty_text" />

    <!-- description -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4"
        android:alpha="?emphasis_medium"
        android:paddingStart="@dimen/spacing_24"
        android:paddingEnd="@dimen/spacing_36"
        android:text="@string/app_desc"
        android:textAlignment="textStart"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_title" />

    <!-- get started -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/skip_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_64"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/get_started"
        android:textAppearance="?textAppearanceButton"
        android:textColor="?colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>