<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".view.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_none"
        android:layout_weight="3"
        android:background="?colorSurface"
        android:paddingHorizontal="@dimen/spacing_24"
        android:paddingVertical="@dimen/spacing_20">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/top_header_logo"
            android:layout_width="@dimen/spacing_120"
            android:layout_height="@dimen/spacing_120"
            app:layout_constraintBottom_toTopOf="@id/top_header_title"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/login"
            tools:src="@drawable/ic_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/top_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="textStart"
            android:textAppearance="?textAppearanceHeadline4"
            android:textColor="?colorSecondaryVariant"
            app:layout_constraintBottom_toTopOf="@id/top_header_desc"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/top_header_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="?emphasis_medium"
            android:text="@string/login_prompt"
            android:textAlignment="textStart"
            android:textAppearance="?textAppearanceSubtitle2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_section"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_none"
        android:layout_weight="4"
        android:background="?android:colorBackground"
        android:paddingHorizontal="@dimen/spacing_24"
        android:paddingVertical="@dimen/spacing_20"
        tools:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/username_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="?emphasis_medium"
            android:text="@string/username"
            android:textAlignment="textStart"
            android:textAppearance="?textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_field_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:endIconTint="?colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_header"
            app:startIconDrawable="@drawable/mail"
            app:startIconTint="?colorPrimaryVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textAppearance="?textAppearanceBody1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/password_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_24"
            android:alpha="?emphasis_medium"
            android:text="@string/password"
            android:textAlignment="textStart"
            android:textAppearance="?textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_field_container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:endIconTint="?colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_header"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="?colorPrimaryVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAppearance="?textAppearanceBody1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_account_leading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_24"
            android:text="@string/no_account_yet"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_account_clickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4"
            android:layout_marginTop="@dimen/spacing_24"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/create_one"
            android:textAppearance="?textAppearanceBody1"
            android:textColor="?colorSecondaryVariant"
            app:layout_constraintStart_toEndOf="@id/no_account_leading"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_button"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="@dimen/spacing_56"
            android:layout_marginTop="@dimen/spacing_20"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:paddingHorizontal="@dimen/spacing_20"
            android:text="@string/sign_in"
            android:textAppearance="?textAppearanceButton"
            android:textColor="?colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_field_container"
            tools:enabled="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- progress -->
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="@dimen/spacing_120"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_120"
        android:indeterminate="true"
        app:indicatorColor="?colorSecondary"
        app:indicatorDirectionLinear="endToStart"
        tools:visibility="visible" />

</androidx.appcompat.widget.LinearLayoutCompat>